delete and some adjusts
